<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="#bb000000"
    android:visibility="gone">

    <RelativeLayout
        android:id="@+id/shoushen_chuli_rootview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingBottom="44dp"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/shoushen_circle_search_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/shoushen_circle_img"
                android:layout_width="210dp"
                android:layout_height="210dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/img_rotate_circle_white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/circle_root_"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/shoushen_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center_horizontal"
                        android:text="0"
                        android:textColor="#ffffff"
                        android:textSize="50dp" />

                    <TextView
                        android:id="@+id/shoushen_number_danwei"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="2dp"
                        android:layout_toRightOf="@id/shoushen_number"
                        android:gravity="center_horizontal"
                        android:text="MB"
                        android:textColor="#ffffff"
                        android:textSize="16sp" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/main_fragment_sroll_shoushen_has"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/main_fragment_sroll_one_shoushen_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/shoushen_circle_search_root"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:textColor="#ffffff" />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/shoushen_finish_rootview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingBottom="100dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/main_fragment_sroll_shoushen_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/main_fragment_sroll_ok"
            android:textColor="#ffffff"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/main_fragment_sroll_shoushen_ok_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_fragment_sroll_shoushen_ok"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/main_fragment_sroll_shoushen_ok_des"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_below="@id/main_fragment_sroll_shoushen_ok_des"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:src="@drawable/img_ad_1" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/one_key_shoushen_cancle_buttom"
            android:layout_width="320dp"
            android:layout_height="44dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_shape"
            android:clickable="true"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/main_fragment_sroll_cancle"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/one_key_shoushen_share_buttom"
            android:layout_width="320dp"
            android:layout_height="44dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_shape"
            android:clickable="true"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/main_fragment_sroll_share"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>